<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:orderInCategory="101"
        android:title="@string/action_add_favorite" />
    <item
        android:id="@+id/menu_remove_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:orderInCategory="102"
        android:visible="false"
        android:title="@string/action_remove_favorite" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"
        android:title="@string/menu_delete"/>
</menu>